--- a/webclient/src/style/base.scss
+++ b/webclient/src/style/base.scss
@@ -1,61 +1,4 @@
-body {
-  margin: 0 auto;
-  line-height: 1.5;
-  padding: 4em 1em;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  color: #566b78;
-}
-
-h1,
-h2,
-strong {
-  color: #333;
-}
-
-h2 {
-  margin-top: 1em;
-  padding-top: 1em;
-}
-
-a {
-  color: #e81c4f;
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-a:hover {
-  color: #cb1c4f;
-  text-decoration: none;
-}
-
-.message-bubble {
-  margin: 1em;
-  padding: 1em;
-  background: #efefef;
-}
-
-.dashboard {
-  display: flex;
-}
-
-.latest-messages-container {
-  width: 14em;
-}
-
-.all-threads-container {
-  flex: 1;
-  display: flex;
-}
-
-.thread {
-  margin: .5em;
-  padding: .5em;
-  border: 1px solid #ddd;
-  height: 400px;
-  overflow: scroll;
-  box-shadow: 2px 2px 2px #eee;
-  min-width: 260px;
-  width: 260px;
-  float: left;
-  display: inline-block;
-}
+@import 'colors';
+@import 'forms';
+@import 'layout';
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
