--- a/webclient/src/style/_forms.scss
+++ b/webclient/src/style/_forms.scss
@@ -1,6 +1,48 @@
 input {
-  border: 1px solid $primary-activate;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
   font-size: 0.8rem;
+  color: $content;
+  display:block;
+  width:100%;
+  padding:0;
+  border-width:0;
+
+  &::placeholder {
+    color: $simple-content;
+  }
+}
+
+button {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: .8em;
+  border-width: 0;
+  background-color: $flair;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+  color: $simple;
+  cursor: pointer;
+  border: none;
+  border-radius: .5em;
+  font-weight: 300;
+  text-decoration: none;
+
+  &:hover {
+    background-color: darken($flair, 7);
+    text-decoration: none;
+    color: $simple;
+    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  &.feature {
+    width: 100%;
+  }
+}
+
+*:focus {
+  outline: none;
 }
 
 .compose-field {
@@ -26,6 +68,7 @@ input {
     border: none;
     margin: .15em .3em 0 .7em;
     color: $content;
+    width: auto;
 
     &::placeholder {
       color: $simple-content;
