--- a/webclient/src/style/base.scss
+++ b/webclient/src/style/base.scss
@@ -2,4 +2,6 @@
 @import 'colors';
 @import 'forms';
 @import 'layout';
+@import 'login';
+@import 'spinner';
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
