--- a/webclient/src/style/_layout.scss
+++ b/webclient/src/style/_layout.scss
@@ -144,7 +144,7 @@ a:hover {
         overflow: scroll;
         border-bottom: 1px solid $simple-content;
 
-        .loading-messages {
+        .info-message {
           text-align: center;
           padding: 1em;
           color: $simple-content;
