--- a/webclient/src/style/_login.scss
+++ b/webclient/src/style/_login.scss
@@ -1,4 +1,4 @@
-.login-page {
+.fill-page {
   width: 100%;
   height: 100vh;
   background-color: $scuba;
@@ -6,13 +6,19 @@
   padding: 0;
 }
 
-.login-container {
+.fill-panel {
   width: 30em;
   margin: auto;
   position: relative;
   top: 40%;
   transform: translateY(-60%);
+  padding: 2em;
+  background-color: white;
+  border-radius: .5em;
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
+}
 
+.login-form {
   fieldset {
     margin: 1em 0;
   }
@@ -22,13 +28,6 @@
     border: 1px solid $simple;
     box-sizing: border-box;
   }
-}
-
-.login-form {
-  padding: 2em;
-  background-color: white;
-  border-radius: .5em;
-  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
 }
 
 .auth-error {
