Add border style to error messages

--- a/webclient/src/style/_forms.scss
+++ b/webclient/src/style/_forms.scss
@@ -13,6 +13,10 @@ input {
   &::placeholder, &:disabled {
     color: $simple-content;
   }
+
+  &.error {
+    border-color: $flair;
+  }
 }
 
 button {
