Add ruby version for rvm

--- a/ruby-server/app/views/layouts/application.html.erb
+++ b/ruby-server/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RubyServer</title>
+    <title>TextChat</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
