User can buy phone numbers

--- a/ruby-server/app/javascript/src/_layout.scss
+++ b/ruby-server/app/javascript/src/_layout.scss
@@ -118,6 +118,12 @@ a:hover {
   }
 }
 
+@media (min-width: 1024px) {
+  .latest-messages-container {
+    min-width: 24em;
+  }
+}
+
 .thread-summary {
   padding: 0.5em 1em;
   cursor: pointer;
