Add plans and validation errors

--- a/app/javascript/src/chat.scss
+++ b/app/javascript/src/chat.scss
@@ -4,4 +4,6 @@
 @import 'layout';
 @import 'login';
 @import 'spinner';
+@import 'typography';
+@import 'flash';
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
